# teresa-ferreira-data-engineer-assessment

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/firds/: __init__.py  extractor.py  parser.py  transformer.py  uploader.py
tests/: __init__.py  test_extractor.py  test_parsor.py  test_transformer.py  test_uploader.py
tests/resources/: firds_instruments.xml  firds_instruments_with_a_count.csv  firds_instruments_with_contains_a.csv
