[project]
name = "teresa-ferreira-data-engineer-assessment"
version = "0.1.0"
description = "ETL pipeline for ESMA FIRDS data processing."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Teresa Ferreira"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true